--- a/views/register.html
+++ b/views/register.html
@@ -6,10 +6,10 @@
             <hr>
     
             <label for="name">First Name</label>
-            <input type="text" placeholder="Enter First Name" name="firstname">
+            <input type="text" placeholder="Enter First Name" name="firstName">
     
             <label for="name">Last Name</label>
-            <input type="text" placeholder="Enter Last Name" name="lastname">
+            <input type="text" placeholder="Enter Last Name" name="lastName">
     
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email">
